--- a/calculator.html
+++ b/calculator.html
@@ -102,7 +102,7 @@
 
             function updatedCalculation(value) {
                 calculation += value;
-                console.log(calculation)
+                console.log(calculation);
             }
         </script>
     </body>
